Fix CSS Subhead overflow

--- a/shared/styles/styles.scss
+++ b/shared/styles/styles.scss
@@ -91,7 +91,7 @@ header {
 
 #subhead {
     background-color: rgba(0, 0, 0, 10%);
-    width: 100vw;
+    width: 100%;
     height: $subhead_height;
     margin-left: auto;
     margin-right: auto;
